<resources>
    <string name="app_name">gem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number(Optional)</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign out</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="zipcode">Zipcode</string>
    <string name="post_listing">Post Listing</string>
    <string name="phone">Phone Number</string>
    <string name="Lorem"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!</p> <p>Ad dolore dignissimos asperiores dicta facere optio quod commodi nam tempore recusandae.]]></string>
    <string name="electronics">Electronics</string>
    <string name="fashion">Fashion</string>
    <string name="automobile">Automobile</string>
    <string name="home_amp_decor"><![CDATA[Home & Decor]]></string>
    <string name="furniture">Furniture</string>
    <string name="appliances">Appliances</string>
    <string name="kids">Kids</string>
    <string name="others">Others</string>
    <string name="login">Login</string>
    <string name="sell_something">Sell Something</string>
    <string name="account">Account</string>
    <string name="sell">SELL</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="log_out">Log Out</string>
    <string name="buy">BUY</string>
    <string name="price_default">$0.00</string>
    <string name="_88888">88888</string>
    <string name="call">Call</string>
    <string name="browse">Browse</string>
    <string name="edit">Edit</string>
    <string name="forgot_password">Forgot Password?</string>


    <string-array name="categories_array">
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Automobile</item>
        <item>Home &amp; Decor</item>
        <item>Furniture</item>
        <item>Appliances</item>
        <item>Kids</item>
        <item>Other</item>
    </string-array>
</resources>
