<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.kierrapalmer.gem.CategoryListFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="All Items"
                android:background="@drawable/gradient6"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>
            <Button
                android:id="@+id/btnElectronics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electronics"
                android:background="@drawable/gradient"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnFashion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fashion"
                android:background="@drawable/gradient2"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnAutomobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/automobile"
                android:background="@drawable/gradient3"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_amp_decor"
                android:background="@drawable/gradient4"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnFurniture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/furniture"
                android:background="@drawable/gradient5"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnAppliances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appliances"
                android:background="@drawable/gradient6"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnKids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:background="@drawable/gradient7"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btnOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:background="@drawable/gradient8"
                android:textColor="#fff"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
