<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.kierrapalmer.gem.Fragments.CreateListingFragment">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="400dp"
                android:minHeight="200dp" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/browse"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price"
                            android:inputType="numberDecimal"/>
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zipcode"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/chkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Use Gem contact info?" />

                    <TextView
                        android:id="@+id/txtEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit"
                        android:textColor="@color/com_facebook_blue" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
